CHris check this out

--- a/forest.html
+++ b/forest.html
@@ -21,14 +21,21 @@
 
 		<div class="forest-container">
 			<div class="avatar-logo"></div>
+			<div class="large-pink-glow">
+					<img src="src/img/large-pink-glow.png" alt="">
+				</div>
 
 			<div class="plant-glow-container">
+				
+				<div class="small-pink-glow">
+					<img src="src/img/small-pink-glow.png" alt="">
+				</div>
 				<a href="plants.html" class="plant-glow"></a>
 			</div>
 			<div class="dinosaur-container">
-				<div class="dinosaur">
+				<a href="animals.html" class="dinosaur">
 <!-- 					<img src="src/img/dinosaur.png" alt="">
- -->			</div>
+ -->			</a>
 			</div>
 			
 		</div>
