--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 	</head>
 	<body>
 
+		<div class="face-dots-1">
+			<img src="src/img/dots-1.png" alt="">
+		</div>
+		<div class="face-dots-2">
+			<img src="src/img/dots-2.png" alt="">
+		</div>
+
+
 	<div class="mobile-hero-text">
 		<div class="avatar-logo">
 	
@@ -41,7 +49,7 @@
 <!-- 		<script src="dist/js/main.js"></script> -->
 		
 		<!-- LEETS: if you want to use transpiled ES6 JS files, do so in the src/js folder, and use this script tag -->	
-		
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js" ></script>
 		<script src="src/js/app.js"></script>
 
 		<!-- to learn more about src vs dist, go here https://stackoverflow.com/questions/23730882/what-is-the-role-of-src-and-dist-folders -->
