--- a/plants.html
+++ b/plants.html
@@ -26,12 +26,13 @@
 		<div class="tree-of-souls-container">
 			<div class="hero-image">
 				<div class="shaddow">
-					<div class="section-title">
-						<h1>Tree Of Souls</h1>
-					</div>
 				</div>
+
 			</div>
 			<div class="text-container">
+				<div class="section-title">
+						<h1>Tree Of Souls</h1>
+					</div>
 				<p>The Tree of Souls (Na’vi name: Vitraya Ramunong) is a giant willow-like tree that is said to be the closest connection to Eywa on Pandora. As pointed out by Miles Quaritch, the tree is a point of extreme spiritual significance to the Na’vi, more so than any other point on Pandora. As of 2154, the site has been spiritually significant for at least 3,00 years. The Tree of Souls, besides being a connection to Eywa, also works as a way for her to directly interact with the world through the seeds of the tree. The roots of the Tree of Souls are capable of initiating a neutral link with the Na’vi. like with the Tree of Voices. This allows all of the Na’vi to unite as one. </p>
 
 				<footer>
@@ -51,12 +52,12 @@
 		<div class="helicoradian-container">
 			<div class="hero-image">
 				<div class="shaddow">
-					<div class="section-title">
-						<h1>Helicoradian</h1>
-					</div>
 				</div>
 			</div>
 			<div class="text-container">
+				<div class="section-title">
+						<h1>Helicoradian</h1>
+				</div>
 				<p>
 					The helicoradian (Na’vi name: loreyu meaning “beautiful spiral”) is a zooplantae (part animal, part plant) possessing a single leaf that responds to touch by coiling up and retracting to the ground, Helicoradia can grow to 6-8meters (20-26 feet) in height and 2.5 meters (8.2 feet) across. The Na’vi use leaves of the helicoradian for ornate ceremonial robes as well as other garments, tents, and sacks. Orange pigments in leaves can be extracted and used for paint. The Na’vi are able to wander among the helicoradian without triggering this defense response, but are warned of the presence of danger when they start to retract.  </p>
 
@@ -77,12 +78,12 @@
 		<div class="home-tree-container">
 			<div class="hero-image">
 				<div class="shaddow">
-					<div class="section-title">
-						<h1>Home Tree</h1>
-					</div>
 				</div>
 			</div>
 			<div class="text-container">
+				<div class="section-title">
+					<h1>Home Tree</h1>
+				</div>
 				<p>
 					Hometrees (Na'vi name: Kelutral) are massive trees that can be found throughout Pandora. Many Na'vi clans, such as the Omaticaya and the Tipani make these enormous plants their home. There are hundreds of disparate Na'vi clans on Pandora. Some of these trees can grow to be 150m tall, or two to three times the height of the Terran redwoods that once covered the Pacific Northwest. The circumference of a Hometree is great enough to house dozens of clan members. The tree is honeycombed with natural hollows and alcoves in which the Na'vi sleep, eat, weave, dance and celebrate their connection to Eywa.   </p>
 
@@ -103,13 +104,13 @@
 		<div class="panopyra-container">
 			<div class="hero-image">
 				<div class="shaddow">
-					<div class="section-title">
-						<h1>Panopyra</h1>
-					</div>
 				</div>
 			</div>
 
 			<div class="text-container">
+				<div class="section-title">
+					<h1>Panopyra</h1>
+				</div>
 				<p>
 					Hometrees (Na'vi name: Kelutral) are massive trees that can be found throughout Pandora. Many Na'vi clans, such as the Omaticaya and the Tipani make these enormous plants their home. There are hundreds of disparate Na'vi clans on Pandora. Some of these trees can grow to be 150m tall, or two to three times the height of the Terran redwoods that once covered the Pacific Northwest. The circumference of a Hometree is great enough to house dozens of clan members. The tree is honeycombed with natural hollows and alcoves in which the Na'vi sleep, eat, weave, dance and celebrate their connection to Eywa.   </p>
 
@@ -127,11 +128,6 @@
 			</div>
 		</div>
 
-		<div class="box" style="background-color: blue; width: 50px; height: 50px;">
-			
-		</div>
-
-
 
 
 
@@ -148,11 +144,11 @@
 
 
 
-
+		<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 		<script src="src/js/TweenMax.js" ></script>
 		<script src="src/js/Draggable.js" ></script>
 		<script src="src/js/ThrowPropsPlugin.js" ></script>
-	  	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+		<script src="src/js/hammer.min.js" ></script>
 		<script src="src/js/app.js"></script>
 
 		<!-- to learn more about src vs dist, go here https://stackoverflow.com/questions/23730882/what-is-the-role-of-src-and-dist-folders -->
