--- a/animals.html
+++ b/animals.html
@@ -6,6 +6,8 @@
 		<title></title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+
 
 		<!-- NOOBS: if you're working in plain old CSS, do so in dist/css and use these style tags -->
 		<!-- <link rel="stylesheet" href="dist/css/reset.css">
@@ -21,19 +23,19 @@
 
 		<!-- to learn more about src vs dist, go here https://stackoverflow.com/questions/23730882/what-is-the-role-of-src-and-dist-folders -->
 	</head>
-	<body>
+	<body class="body">
 
-
-		<div class="slider">
-			
-		</div>
 		<div class="animals-container">
+			<nav>
+				<div class="hamburger">
+					<img src="src/img/hamburger.png" alt="">
+				</div>
+				<div class="logo">
+					<img src="src/img/avatar-logo.png" alt="">
+				</div>
+			</nav>
 			<div class="direhorse-bg-container">
 			<div class="text-container">
-
-				<div class="section-title">
-					<h1>Direhorse</h1>
-				</div>
 
 				<div class="page-indicators">
 					<div class="dot"></div>
@@ -42,33 +44,36 @@
 					<div class="dot"></div>
 				</div>
 
+				<div class="section-title">
+					<img src="src/img/horseName.png" alt="">
+				</div>
 				<p>Direhorses (Na'vi name: pa'li) are nectarivores, vaguely horse-like in appearance, with very long necks and small heads. They are roughly the size of an elephant and are native creatures of Pandora.When wild, the animals move together in a loose herd through the forests, feeding on tree bark and shrubs. Herds numbering in the dozens have been spotted from aircraft, but evidence (including scatological and plant impact) suggests that herds of more than one hundred animals are not uncommon. The direhorse, as with most native creatures of Pandora, has two long, thin antennae (called a neural whip by humans) that emerge from either side of the top of the skull. Direhorses can be tamed to aid their riders in the hunt and in battle. </p>
-
 				<div class="animal-image">
 					<img src="src/img/direhorse/horseAnimal.png" alt="">
 				</div>
 			</div>
-			
-			<footer>
+		</div>
+		<div class="mountain-banshee-bg-container">
+			<nav>
+				<div class="hamburger">
+					<img src="src/img/hamburger.png" alt="">
+				</div>
 				<div class="logo">
 					<img src="src/img/avatar-logo.png" alt="">
 				</div>
-			</footer>
-		</div>
+			</nav>
 
-
-		<div class="mountain-banshee-bg-container">
 			<div class="text-container">
-
-				<div class="section-title">
-					<h1>Mountain Banshee</h1>
-				</div>
 
 				<div class="page-indicators">
 					<div class="dot"></div>
 					<div class="dot"></div>
 					<div class="dot"></div>
 					<div class="dot"></div>
+				</div>
+
+				<div class="section-title">
+					<img src="src/img/banshee/bansheeName.png" alt="">
 				</div>
 
 				<p>Mountain banshees (Na'vi name: ikran) are large, bird-like aerial predators that are native to Pandora. They are used by the Na'vi for hunting from the air and traveling larger distances. Ikran are also used in battle, where the mount attacks its opponents from the air. Bonding with a banshee and becoming an Ikran Makto is a dangerous and required rite of passage for Na'vi warriors in some clans. Like the direhorse, a Na'vi can connect to a banshee through a neural interface that allows animal and rider to move with apparent effortlessness through the skies. The mountain bansheet is highly adapted for flight. Specially developed muscles attached to the breastbone allow for the powerful strokes needed to achieve lift. </p>
@@ -77,28 +82,28 @@
 					<img src="src/img/banshee/bansheeAnimal.png" alt="">
 				</div>
 			</div>
-			
-			<footer>
+		</div>
+
+		<div class="thanator-bg-container">
+			<nav>
+				<div class="hamburger">
+					<img src="src/img/hamburger.png" alt="">
+				</div>
 				<div class="logo">
 					<img src="src/img/avatar-logo.png" alt="">
 				</div>
-			</footer>
-		</div>
-
-
-
-		<div class="thanator-bg-container">
+			</nav>
 			<div class="text-container">
-
-				<div class="section-title">
-					<h1>Thanator</h1>
-				</div>
 
 				<div class="page-indicators">
 					<div class="dot"></div>
 					<div class="dot"></div>
 					<div class="dot"></div>
 					<div class="dot"></div>
+				</div>
+
+				<div class="section-title">
+					<img src="src/img/thanator/thanaName.png" alt="">
 				</div>
 
 				<p>The thanator (Na'vi name: palulukan meaning "dry mouth bringer of fear") is a creature that lives on Pandora. Although many regions of the moon have yet to be explored, xenobiologists currently believe that it may be the apex land predator on Pandora. Reminiscent of a Terran panther or lion, this enormous, powerful animal is unique in its ability to lord over its territory and strike fear into the largest and fiercest of Pandora's creatures. Even the Na'vi, who are renowned for their courage, are shaken by the approach of the creature. A lean and agile cat-like creature, its musculature is pronounced and impressive, providing power for protracted runs and leaps. The speed of its neck and jaw strike is swift.  </p>
@@ -107,20 +112,19 @@
 					<img src="src/img/thanator/thanaAnimal.png" alt="">
 				</div>
 			</div>
-			
-			<footer>
-				<div class="logo">
-					<img src="src/img/avatar-logo.png" alt="">
-				</div>
-			</footer>
 		</div>
 
 		<div class="hexapede-bg-container">
-			<div class="text-container">
-
-				<div class="section-title">
-					<h1>Hexapede</h1>
+			<nav>
+				<div class="hamburger">
+					<img src="src/img/hamburger.png" alt="">
 				</div>
+				<div class="logo">
+					<img src="src/img/avatar-logo.png" alt="">
+				</div>
+			</nav>
+
+			<div class="text-container">
 
 				<div class="page-indicators">
 					<div class="dot"></div>
@@ -129,24 +133,25 @@
 					<div class="dot"></div>
 				</div>
 
+				<div class="section-title">
+					<img src="src/img/hexapede/hexaName.png" alt="">
+				</div>
+
+				
+
 				<p>The thanator (Na'vi name: palulukan meaning "dry mouth bringer of fear") is a creature that lives on Pandora. Although many regions of the moon have yet to be explored, xenobiologists currently believe that it may be the apex land predator on Pandora. Reminiscent of a Terran panther or lion, this enormous, powerful animal is unique in its ability to lord over its territory and strike fear into the largest and fiercest of Pandora's creatures. Even the Na'vi, who are renowned for their courage, are shaken by the approach of the creature. A lean and agile cat-like creature, its musculature is pronounced and impressive, providing power for protracted runs and leaps. The speed of its neck and jaw strike is swift.  </p>
 
 				<div class="animal-image">
 					<img src="src/img/hexapede/hexaAnimal.png" alt="">
 				</div>
 			</div>
-			
-			<footer>
-				<div class="logo">
-					<img src="src/img/avatar-logo.png" alt="">
-				</div>
-			</footer>
 		</div>
 	</div>
+		<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 		<script src="src/js/TweenMax.js" ></script>
 		<script src="src/js/Draggable.js" ></script>
 		<script src="src/js/ThrowPropsPlugin.js" ></script>
-	  	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+		<script src="src/js/hammer.js" ></script>
 		<script src="src/js/app.js"></script>
 
 		<!-- to learn more about src vs dist, go here https://stackoverflow.com/questions/23730882/what-is-the-role-of-src-and-dist-folders -->
