--- a/forest.html
+++ b/forest.html
@@ -44,7 +44,11 @@
 <!-- 		<script src="dist/js/main.js"></script> -->
 		
 		<!-- LEETS: if you want to use transpiled ES6 JS files, do so in the src/js folder, and use this script tag -->	
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js" ></script>
+		<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+		<script src="src/js/TweenMax.js" ></script>
+		<script src="src/js/Draggable.js" ></script>
+		<script src="src/js/ThrowPropsPlugin.js" ></script>
+		<script src="src/js/hammer.min.js" ></script>
 		<script src="src/js/app.js"></script>
 
 		<!-- to learn more about src vs dist, go here https://stackoverflow.com/questions/23730882/what-is-the-role-of-src-and-dist-folders -->
